--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <div class="row g-4 align-items-center">
         <div class="col-12 col-lg-7">
           <h1 class="display-6 mb-2">Materiales del curso, en un solo lugar</h1>
-          <p class="mb-0" style="color: rgba(255,255,255,.75)">
+          <p class="mb-0 hero-lead">
             Navega por sesiones, guías y carpetas HTML. Pensado para uso docente TIC: evidencia, proceso y recursos listos para clase.
           </p>
         </div>
         <div class="col-12 col-lg-5">
           <div class="glass p-3">
-            <label for="search" class="form-label mb-2" style="color: rgba(255,255,255,.78)">Buscar (carpetas / archivos / etiquetas)</label>
+            <label for="search" class="form-label mb-2 hero-label">Buscar (carpetas / archivos / etiquetas)</label>
             <input id="search" class="form-control form-control-lg search" type="search" placeholder="Ej: GitHub, sesión 2, guía, HTML, docx…" autocomplete="off" />
             <div class="d-flex justify-content-between mt-2">
               <div class="small-muted">
@@ -54,6 +54,14 @@
         <span class="badge tag">Markdown</span>
         <span class="badge tag">Word (.docx)</span>
       </div>
+
+      <div class="d-flex flex-wrap gap-2 mt-3">
+        <span class="badge tag">Sesión 1</span>
+        <span class="badge tag">Sesión 2</span>
+        <span class="badge tag">Sesión 3</span>
+        <span class="badge tag">Sesión 4</span>
+        <span class="badge tag">Sesión 5</span>
+      </div>
     </section>
 
     <section class="mt-4 mt-lg-5">
@@ -61,6 +69,16 @@
         <div>
           <h2 class="h4 mb-1">Carpetas de materiales (HTML)</h2>
           <div class="small-muted">Abrir los <strong>index.html</strong> de cada carpeta para navegación interna.</div>
+        </div>
+      </div>
+
+      <div class="glass p-3 mb-3">
+        <div class="fw-semibold">Semana 5 destacada</div>
+        <div class="small-muted">Rutas y controladores con hotspots, diagramas y quiz.</div>
+        <div class="d-flex gap-2 mt-2">
+          <a class="btn btn-ghost" href="Material_Sesion_Clase_5_RUTAS/index.html">Abrir material</a>
+          <a class="btn btn-ghost" href="PEM%20en%20TIC_Sesi%C3%B3n%20de%20Clase%205%20Programaci%C3%B3n%20I.md">Sesión 5 (.md)</a>
+          <a class="btn btn-ghost" href="PEM%20en%20TIC_Gu%C3%ADa%20de%20Aprendizaje%205%20Programaci%C3%B3n%201.md">Guía 5 (.md)</a>
         </div>
       </div>
 
@@ -159,6 +177,30 @@
           </div>
         </div>
 
+        <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="material html sesion 5 spring boot rutas controladores thymeleaf jpa docencia" data-title="Material Sesión 5 Rutas y Controladores">
+          <div class="card item">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <div class="fw-semibold">Material Sesión 5 (Rutas y Controladores)</div>
+                  <div class="small-muted">Rutas GET/POST, hotspots, diagramas y quiz de comprensión.</div>
+                </div>
+                <span class="badge tag">Spring Boot</span>
+              </div>
+              <div class="d-flex flex-wrap gap-2">
+                <span class="badge tag">Sesión 5</span>
+                <span class="badge tag">Rutas</span>
+                <span class="badge tag">MVC</span>
+                <span class="badge tag amber">Docencia TIC</span>
+              </div>
+              <div class="d-flex gap-2 mt-2">
+                <a class="btn btn-ghost" href="Material_Sesion_Clase_5_RUTAS/index.html">Abrir</a>
+                <a class="btn btn-ghost" href="Material_Sesion_Clase_5_RUTAS/README.md">README</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="zip descarga paquete material sesion 2 github" data-title="Material Sesión 2 (ZIP)">
           <div class="card item">
             <div class="card-body">
@@ -181,6 +223,13 @@
         </div>
 
         <!-- Documentos -->
+        <div class="col-12">
+          <div class="glass p-3">
+            <div class="fw-semibold">Documentos oficiales (Sesiones y Guías)</div>
+            <div class="small-muted">Ordenados por semana para facilitar la búsqueda.</div>
+          </div>
+        </div>
+
         <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="documento programa curso markdown" data-title="Formato programa de curso">
           <div class="card item">
             <div class="card-body">
@@ -289,23 +338,6 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="sesion 4 documento spring boot crud h2 thymeleaf bootstrap jpa" data-title="Sesión de Clase 4 Programación I">
-          <div class="card item">
-            <div class="card-body">
-              <div class="d-flex justify-content-between align-items-start">
-                <div>
-                  <div class="fw-semibold">Sesión de Clase 4 (Programación I)</div>
-                  <div class="small-muted">Inicio del CRUD: H2 persistente (archivo) + Thymeleaf + Bootstrap + troubleshooting.</div>
-                </div>
-                <span class="badge tag">MD</span>
-              </div>
-              <div class="d-flex gap-2 mt-2 flex-wrap">
-                <a class="btn btn-ghost" href="PEM%20en%20TIC_Sesi%C3%B3n%20de%20Clase%204%20Programaci%C3%B3n%20I.md">Abrir .md</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="guia 3 documento spring boot java 17 entorno mvnw endpoint" data-title="Guía de Aprendizaje 3">
           <div class="card item">
             <div class="card-body">
@@ -324,6 +356,23 @@
           </div>
         </div>
 
+        <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="sesion 4 documento spring boot crud h2 thymeleaf bootstrap jpa" data-title="Sesión de Clase 4 Programación I">
+          <div class="card item">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <div class="fw-semibold">Sesión de Clase 4 (Programación I)</div>
+                  <div class="small-muted">Inicio del CRUD: H2 persistente (archivo) + Thymeleaf + Bootstrap + troubleshooting.</div>
+                </div>
+                <span class="badge tag">MD</span>
+              </div>
+              <div class="d-flex gap-2 mt-2 flex-wrap">
+                <a class="btn btn-ghost" href="PEM%20en%20TIC_Sesi%C3%B3n%20de%20Clase%204%20Programaci%C3%B3n%20I.md">Abrir .md</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="guia 4 documento spring boot crud h2 thymeleaf bootstrap troubleshooting" data-title="Guía de Aprendizaje 4">
           <div class="card item">
             <div class="card-body">
@@ -336,6 +385,42 @@
               </div>
               <div class="d-flex gap-2 mt-2 flex-wrap">
                 <a class="btn btn-ghost" href="PEM%20en%20TIC_Gu%C3%ADa%20de%20Aprendizaje%204%20Programaci%C3%B3n%201.md">Abrir .md</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="sesion 5 documento spring boot rutas controladores mvc" data-title="Sesión de Clase 5 Programación I">
+          <div class="card item">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <div class="fw-semibold">Sesión de Clase 5 (Programación I)</div>
+                  <div class="small-muted">Rutas y controladores (GET/POST) + comprensión de MVC.</div>
+                </div>
+                <span class="badge tag">MD</span>
+              </div>
+              <div class="d-flex gap-2 mt-2 flex-wrap">
+                <a class="btn btn-ghost" href="PEM%20en%20TIC_Sesi%C3%B3n%20de%20Clase%205%20Programaci%C3%B3n%20I.md">Abrir .md</a>
+                <a class="btn btn-ghost" href="PEM%20en%20TIC_Sesi%C3%B3n%20de%20Clase%205%20Programaci%C3%B3n%20I.docx">Abrir .docx</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-6 col-xl-4 item-wrap" data-tags="guia 5 documento spring boot rutas controladores mvc" data-title="Guía de Aprendizaje 5">
+          <div class="card item">
+            <div class="card-body">
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <div class="fw-semibold">Guía de Aprendizaje 5</div>
+                  <div class="small-muted">Rutas y controladores + checklist de comprensión.</div>
+                </div>
+                <span class="badge tag">MD</span>
+              </div>
+              <div class="d-flex gap-2 mt-2 flex-wrap">
+                <a class="btn btn-ghost" href="PEM%20en%20TIC_Gu%C3%ADa%20de%20Aprendizaje%205%20Programaci%C3%B3n%201.md">Abrir .md</a>
+                <a class="btn btn-ghost" href="PEM%20en%20TIC_Gu%C3%ADa%20de%20Aprendizaje%205%20Programaci%C3%B3n%201.docx">Abrir .docx</a>
               </div>
             </div>
           </div>
@@ -370,7 +455,7 @@
       <div class="glass p-4">
         <h3 class="h5 mb-2">Cómo agregar nuevas carpetas al portal</h3>
         <div class="small-muted mb-2">Este portal es estático (sin servidor). Para sumar materiales nuevos:</div>
-        <ol class="mb-0" style="color: rgba(255,255,255,.78)">
+        <ol class="mb-0 hero-steps">
           <li>Crea tu carpeta en la raíz (por ejemplo: <strong>Material_Sesion_Clase_3_Algo/</strong>).</li>
           <li>Dentro, pon un <strong>index.html</strong> como entrada (idealmente con navegación).</li>
           <li>Duplica una tarjeta en este <strong>index.html</strong> y ajusta título/enlaces/etiquetas.</li>
@@ -394,6 +479,7 @@
       const empty = document.getElementById('empty');
       const resultCount = document.getElementById('resultCount');
       const buildStamp = document.getElementById('buildStamp');
+      const sessionFilters = document.getElementById('sessionFilters');
 
       const items = Array.from(grid.querySelectorAll('.item-wrap'));
 
@@ -403,12 +489,16 @@
 
       function applyFilter(){
         const q = norm(search.value);
+        const activeChip = sessionFilters ? sessionFilters.querySelector('.filter-chip.active') : null;
+        const chipFilter = activeChip ? norm(activeChip.getAttribute('data-filter')) : '';
         let visible = 0;
 
         for (const el of items){
           const title = norm(el.getAttribute('data-title'));
           const tags = norm(el.getAttribute('data-tags'));
-          const show = !q || title.includes(q) || tags.includes(q);
+          const textMatch = !q || title.includes(q) || tags.includes(q);
+          const chipMatch = !chipFilter || tags.includes(chipFilter) || title.includes(chipFilter);
+          const show = textMatch && chipMatch;
           el.classList.toggle('hidden', !show);
           if (show) visible++;
         }
@@ -419,11 +509,30 @@
 
       clearBtn.addEventListener('click', () => {
         search.value = '';
+        if (sessionFilters) {
+          sessionFilters.querySelectorAll('.filter-chip').forEach((chip) => {
+            chip.classList.remove('active');
+          });
+        }
         search.focus();
         applyFilter();
       });
 
       search.addEventListener('input', applyFilter);
+
+      if (sessionFilters) {
+        sessionFilters.addEventListener('click', (event) => {
+          const target = event.target;
+          if (!target.classList.contains('filter-chip')) return;
+          sessionFilters.querySelectorAll('.filter-chip').forEach((chip) => {
+            chip.classList.remove('active');
+          });
+          if (target.getAttribute('data-filter')) {
+            target.classList.add('active');
+          }
+          applyFilter();
+        });
+      }
 
       // Ctrl+K para enfocar buscador
       window.addEventListener('keydown', (e) => {
